--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "trying to figure out errors",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "prettier": "prettier --write \"**/*.+(js|jsx|json|css|md)\""
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
+    "prettier": "^2.2.1",
     "sqlite3": "^5.0.2"
   }
 }
